Werkzeug Changelog
==================

Version 0.9.5
-------------

(bugfix release, release date to be decided)

- Forward charset argument from request objects to the environ
  builder.
- Fixed error handling for missing boundaries in multipart data.

Version 0.9.4
-------------

(bugfix release, released on August 26th 2013)

- Fixed an issue with Python 3.3 and an edge case in cookie parsing.
- Fixed decoding errors not handled properly through the WSGI
  decoding dance.
- Fixed URI to IRI conversion incorrectly decoding percent signs.

Version 0.9.3
-------------

(bugfix release, released on July 25th 2013)

- Restored beahvior of the ``data`` descriptor of the request class to pre 0.9
  behavior.  This now also means that ``.data`` and ``.get_data()`` have
  different behavior.  New code should use ``.get_data()`` always.

  In addition to that there is now a flag for the ``.get_data()`` method that
  controls what should happen with form data parsing and the form parser will
  honor cached data.  This makes dealing with custom form data more consistent.

Version 0.9.2
-------------

(bugfix release, released on July 18th 2013)

- Added `unsafe` parameter to :func:`~werkzeug.urls.url_quote`.
- Fixed an issue with :func:`~werkzeug.urls.url_quote_plus` not quoting
  `'+'` correctly.
- Ported remaining parts of :class:`~werkzeug.contrib.RedisCache` to
  Python 3.3.
- Ported remaining parts of :class:`~werkzeug.contrib.MemcachedCache` to
  Python 3.3
- Fixed a deprecation warning in the contrib atom module.
- Fixed a regression with setting of content types through the
  headers dictionary instead with the content type parameter.
- Use correct name for stdlib secure string comparision function.
- Fixed a wrong reference in the docstring of
  :func:`~werkzeug.local.release_local`.
- Fixed an `AttributeError` that sometimes occurred when accessing the
  :attr:`werkzeug.wrappers.BaseResponse.is_streamed` attribute.


Version 0.9.1
-------------
